--- a/index.html
+++ b/index.html
@@ -19,70 +19,128 @@
       href="./styles/style.css"
     />
     <title>Password Generator - Бесплатный генератор паралей online</title>
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="body">
-    <div class="container">
-      <h1 class="title">Бесплатный online генератор паролей</h1>
-      <p class="description">
-        Ищите надежный пароль? Просто выберите необходимые опции и нажмите кнопку сгенерировать,
-        приложение автоматически сформирует для вас надежный пароль. Мы не храним и не используем
-        ваши пароли, все пароли формируются рандомным генератором.
-      </p>
-      <div class="input-area">
-        <input
-          name="password-area"
-          id="password"
-          placeholder="Выбирите опции для генерации пароля"
-        />
-        <button aria-label="скопировать пароль">Скопировать</button>
+    <section class="generator">
+      <div class="container">
+        <h1 class="title">Бесплатный online генератор паролей</h1>
+        <p class="description">
+          Ищите надежный пароль? Просто выберите необходимые опции и нажмите кнопку сгенерировать,
+          приложение автоматически сформирует для вас надежный пароль. Мы не храним и не используем
+          ваши пароли, все пароли формируются рандомным генератором.
+        </p>
+        <div class="input-area">
+          <input
+            name="password-area"
+            id="password"
+            class="input-password"
+            placeholder="Выбирите опции для генерации пароля"
+          />
+          <button
+            aria-label="скопировать пароль"
+            class="copy-pass-btn"
+          ></button>
+        </div>
+        <div class="password-option">
+          <h2 class="title-option">Настройки пароля</h2>
+          <div class="option-wrapper">
+            <div class="lower-check">
+              <input
+                type="checkbox"
+                name=""
+                id="lower-case-simbols"
+                class="custom-checkbox"
+                checked="true"
+              />
+              <label
+                class="label-checkbox"
+                for="lower-case-simbols"
+              >
+                Cтрочные буквы
+              </label>
+            </div>
+            <div class="upper-check">
+              <input
+                type="checkbox"
+                name=""
+                id="upper-case-simbols"
+                checked="true"
+                class="custom-checkbox"
+              />
+              <label
+                class="label-checkbox"
+                for="upper-case-simbols"
+              >
+                Заглавные буквы
+              </label>
+            </div>
+            <div class="number-check">
+              <input
+                type="checkbox"
+                name=""
+                id="number-simbols"
+                checked="true"
+                class="custom-checkbox"
+              />
+              <label
+                class="label-checkbox"
+                for="number-simbols"
+              >
+                Цифры
+              </label>
+            </div>
+            <div class="simbol-check">
+              <input
+                type="checkbox"
+                name=""
+                id="spicial-simbols"
+                checked="true"
+                class="custom-checkbox"
+              />
+              <label
+                class="label-checkbox"
+                for="spicial-simbols"
+              >
+                Специальные символы
+              </label>
+            </div>
+            <div class="lenght-pass">
+              <label
+                class="label-length"
+                for="length-password"
+                >Колличество символов</label
+              >
+              <div class="counter-length">
+                <button class="operator-length">–</button>
+                <input
+                  class="input-length"
+                  type="number"
+                  id="length-password"
+                  value="16"
+                  max="24"
+                />
+                <button class="operator-length">+</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="generate-password">Сгенерировать пароль</button>
       </div>
-      <div class="password-option">
-        <label for="length-password">Колличество символов</label>
-        <input
-          type="number"
-          id="length-password"
-          value="16"
-        />
-        <br />
-        <label for="lower-case-simbols">
-          <input
-            type="checkbox"
-            name=""
-            id="lower-case-simbols"
-            checked="true"
-          />
-          Использовать строчные буквы </label
-        ><br />
-        <label for="upper-case-simbols">
-          <input
-            type="checkbox"
-            name=""
-            id="upper-case-simbols"
-            checked="true"
-          />
-          Использовать заглавные буквы </label
-        ><br />
-        <label for="number-simbols">
-          <input
-            type="checkbox"
-            name=""
-            id="number-simbols"
-            checked="true"
-          />
-          Использовать цифры </label
-        ><br />
-        <label for="spicial-simbols">
-          <input
-            type="checkbox"
-            name=""
-            id="spicial-simbols"
-            checked="true"
-          />
-          Использовать специальные символы </label
-        ><br />
-      </div>
-      <button class="generate-password">Сгенерировать пароль</button>
-    </div>
+    </section>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
