--- a/index.html
+++ b/index.html
@@ -33,6 +33,40 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Служебные теги: тип и точный адрес страницы -->
+    <meta
+      property="og:type"
+      content="webapplication"
+    />
+    <meta
+      property="og:url"
+      content="https://kuznecovdenis.github.io/password-generator/"
+    />
+    ​
+    <!-- Заголовок и описание для превью -->
+    <meta
+      property="og:title"
+      content="Бесплатный online генератор паролей - Password Generator"
+    />
+    <meta
+      property="og:description"
+      content="Генерируйте пароли бесплатно, для регистраций на сайтах и в приложениях. Позаботьтесь о своей безопасности"
+    />
+    ​
+    <!-- Картинка для превью, адрес картинки должен быть полным, с указанием домена сайта -->
+    <meta
+      property="og:image"
+      content="https://kuznecovdenis.github.io/password-generator/img/og-image-generator-v2.svg"
+    />
+    <meta
+      property="og:image:width"
+      content="968"
+    />
+    <meta
+      property="og:image:height"
+      content="504"
+    />
   </head>
   <body class="body">
     <section class="generator">
