--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html
+  lang="ru"
+  prefix="og: http://ogp.me/ns#"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -57,7 +60,7 @@
     <!-- Картинка для превью, адрес картинки должен быть полным, с указанием домена сайта -->
     <meta
       property="og:image"
-      content="https://kuznecovdenis.github.io/password-generator/img/og-image-generator-v2.svg"
+      content="https://kuznecovdenis.github.io/password-generator/img/og-imager-v2.jpg"
     />
     <meta
       property="og:image:width"
