fix path og img

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Картинка для превью, адрес картинки должен быть полным, с указанием домена сайта -->
     <meta
       property="og:image"
-      content="https://kuznecovdenis.github.io/password-generator/img/og-imager-v2.jpg"
+      content="https://raw.githubusercontent.com/KuznecovDenis/password-generator/main/img/og-image-2.jpg"
     />
     <meta
       property="og:image:width"
