--- a/index.html
+++ b/index.html
@@ -1,183 +1,89 @@
 <!DOCTYPE html>
-<html
-  lang="ru"
-  prefix="og: http://ogp.me/ns#"
->
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <link
-      rel="icon"
-      href="favicon.ico"
-    />
-    <link
-      rel="stylesheet"
-      href="./styles/style.css"
-    />
-    <title>Password Generator - Бесплатный генератор паралей online</title>
+<html lang="ru" prefix="og: http://ogp.me/ns#">
 
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <title>Password Generator - Бесплатный генератор паралей online</title>
 
-    <!-- Служебные теги: тип и точный адрес страницы -->
-    <meta
-      property="og:type"
-      content="webapplication"
-    />
-    <meta
-      property="og:url"
-      content="https://kuznecovdenis.github.io/password-generator/"
-    />
-    ​
-    <!-- Заголовок и описание для превью -->
-    <meta
-      property="og:title"
-      content="Бесплатный online генератор паролей - Password Generator"
-    />
-    <meta
-      property="og:description"
-      content="Генерируйте пароли бесплатно, для регистраций на сайтах и в приложениях. Позаботьтесь о своей безопасности"
-    />
-    ​
-    <!-- Картинка для превью, адрес картинки должен быть полным, с указанием домена сайта -->
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/KuznecovDenis/password-generator/main/img/og-image-2.jpg"
-    />
-    <meta
-      property="og:image:width"
-      content="968"
-    />
-    <meta
-      property="og:image:height"
-      content="504"
-    />
-  </head>
-  <body class="body">
-    <section class="generator">
-      <div class="container">
-        <h1 class="title">Бесплатный online генератор паролей</h1>
-        <p class="description">
-          Ищите надежный пароль? Просто выберите необходимые опции и нажмите кнопку сгенерировать,
-          приложение автоматически сформирует для вас надежный пароль. Мы не храним и не используем
-          ваши пароли, все пароли формируются рандомным генератором.
-        </p>
-        <div class="input-area">
-          <input
-            name="password-area"
-            id="password"
-            class="input-password"
-            placeholder="Выбирите опции для генерации пароля"
-          />
-          <button
-            aria-label="скопировать пароль"
-            class="copy-pass-btn"
-          ></button>
-        </div>
-        <div class="password-option">
-          <h2 class="title-option">Настройки пароля</h2>
-          <div class="option-wrapper">
-            <div class="lower-check">
-              <input
-                type="checkbox"
-                name=""
-                id="lower-case-simbols"
-                class="custom-checkbox"
-                checked="true"
-              />
-              <label
-                class="label-checkbox"
-                for="lower-case-simbols"
-              >
-                Cтрочные буквы
-              </label>
-            </div>
-            <div class="upper-check">
-              <input
-                type="checkbox"
-                name=""
-                id="upper-case-simbols"
-                checked="true"
-                class="custom-checkbox"
-              />
-              <label
-                class="label-checkbox"
-                for="upper-case-simbols"
-              >
-                Заглавные буквы
-              </label>
-            </div>
-            <div class="number-check">
-              <input
-                type="checkbox"
-                name=""
-                id="number-simbols"
-                checked="true"
-                class="custom-checkbox"
-              />
-              <label
-                class="label-checkbox"
-                for="number-simbols"
-              >
-                Цифры
-              </label>
-            </div>
-            <div class="simbol-check">
-              <input
-                type="checkbox"
-                name=""
-                id="spicial-simbols"
-                checked="true"
-                class="custom-checkbox"
-              />
-              <label
-                class="label-checkbox"
-                for="spicial-simbols"
-              >
-                Специальные символы
-              </label>
-            </div>
-            <div class="lenght-pass">
-              <label
-                class="label-length"
-                for="length-password"
-                >Колличество символов</label
-              >
-              <div class="counter-length">
-                <button class="operator-length">–</button>
-                <input
-                  class="input-length"
-                  type="number"
-                  id="length-password"
-                  value="16"
-                  max="24"
-                />
-                <button class="operator-length">+</button>
-              </div>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+
+  <!-- Служебные теги: тип и точный адрес страницы -->
+  <meta property="og:type" content="webapplication" />
+  <meta property="og:url" content="https://kuznecovdenis.github.io/password-generator/" />
+  ​
+  <!-- Заголовок и описание для превью -->
+  <meta property="og:title" content="Бесплатный online генератор паролей - Password Generator" />
+  <meta property="og:description"
+    content="Генерируйте пароли бесплатно, для регистраций на сайтах и в приложениях. Позаботьтесь о своей безопасности" />
+  ​
+  <!-- Картинка для превью, адрес картинки должен быть полным, с указанием домена сайта -->
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/KuznecovDenis/password-generator/main/img/og-image-2.jpg" />
+  <meta property="og:image:width" content="968" />
+  <meta property="og:image:height" content="504" />
+</head>
+
+<body class="body">
+  <section class="generator">
+    <div class="container">
+      <h1 class="title">Бесплатный online генератор паролей</h1>
+      <p class="description">
+        Ищите надежный пароль? Просто выберите необходимые опции и нажмите кнопку сгенерировать,
+        приложение автоматически сформирует для вас надежный пароль. Мы не храним и не используем
+        ваши пароли, все пароли формируются рандомным генератором.
+      </p>
+      <div class="input-area">
+        <textarea name="password-area" id="password" class="input-password"
+          placeholder="Выбирите опции для генерации пароля"></textarea>
+        <button aria-label="скопировать пароль" class="copy-pass-btn" id="copy"></button>
+      </div>
+      <div class="password-option">
+        <h2 class="title-option">Настройки пароля</h2>
+        <div class="option-wrapper">
+          <div class="lower-check">
+            <input type="checkbox" name="" id="lower-case-simbols" class="custom-checkbox" checked="true" />
+            <label class="label-checkbox" for="lower-case-simbols">
+              Cтрочные буквы
+            </label>
+          </div>
+          <div class="upper-check">
+            <input type="checkbox" name="" id="upper-case-simbols" checked="true" class="custom-checkbox" />
+            <label class="label-checkbox" for="upper-case-simbols">
+              Заглавные буквы
+            </label>
+          </div>
+          <div class="number-check">
+            <input type="checkbox" name="" id="number-simbols" checked="true" class="custom-checkbox" />
+            <label class="label-checkbox" for="number-simbols">
+              Цифры
+            </label>
+          </div>
+          <div class="simbol-check">
+            <input type="checkbox" name="" id="spicial-simbols" class="custom-checkbox" />
+            <label class="label-checkbox" for="spicial-simbols">
+              Специальные символы
+            </label>
+          </div>
+          <div class="lenght-pass">
+            <label class="label-length" for="length-password">Колличество символов</label>
+            <div class="counter-length">
+              <button class="operator-length" id="minus_btn">–</button>
+              <input class="input-length" type="text" id="length-password" value="16" />
+              <button class="operator-length" id="plus_btn">+</button>
             </div>
           </div>
         </div>
-        <button class="generate-password">Сгенерировать пароль</button>
       </div>
-    </section>
-    <script src="./scripts/script.js"></script>
-  </body>
+      <button class="generate-password">Сгенерировать пароль</button>
+    </div>
+  </section>
+  <script src="./scripts/script.js"></script>
+</body>
+
 </html>
